// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DepositDateField Platform specific rendering date picker matches snapshot on Android 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
        "marginBottom": 16,
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist-Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginBottom": 6,
      }
    }
    testID="label"
  >
    Date of Birth
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#b7bbc8",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "opacity": 1,
        "paddingHorizontal": 16,
      }
    }
    testID="textfield"
  >
    <View
      style={
        {
          "marginRight": 8,
        }
      }
      testID="textfield-startacccessory"
    >
      <SvgMock
        color="#121314"
        fill="currentColor"
        height={20}
        name="Calendar"
        style={
          {
            "height": 20,
            "width": 20,
          }
        }
        width={20}
      />
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <TouchableOpacity
        activeOpacity={0.7}
        onPress={[Function]}
        style={
          {
            "flex": 1,
            "height": "100%",
          }
        }
      >
        <TextInput
          editable={false}
          placeholder="01/01/2000"
          placeholderTextColor="#b7bbc8"
          pointerEvents="none"
          style={
            {
              "color": "#121314",
              "flex": 1,
              "fontSize": 16,
              "height": "100%",
              "textAlign": "left",
            }
          }
          value="01/01/2024"
        />
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`DepositDateField Platform specific rendering date picker matches snapshot on iOS 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
        "marginBottom": 16,
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist-Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginBottom": 6,
      }
    }
    testID="label"
  >
    Date of Birth
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#b7bbc8",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "opacity": 1,
        "paddingHorizontal": 16,
      }
    }
    testID="textfield"
  >
    <View
      style={
        {
          "marginRight": 8,
        }
      }
      testID="textfield-startacccessory"
    >
      <SvgMock
        color="#121314"
        fill="currentColor"
        height={20}
        name="Calendar"
        style={
          {
            "height": 20,
            "width": 20,
          }
        }
        width={20}
      />
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <TouchableOpacity
        activeOpacity={0.7}
        onPress={[Function]}
        style={
          {
            "flex": 1,
            "height": "100%",
          }
        }
      >
        <TextInput
          editable={false}
          placeholder="01/01/2000"
          placeholderTextColor="#b7bbc8"
          pointerEvents="none"
          style={
            {
              "color": "#121314",
              "flex": 1,
              "fontSize": 16,
              "height": "100%",
              "textAlign": "left",
            }
          }
          value="01/01/2024"
        />
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`DepositDateField render matches snapshot 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
        "marginBottom": 16,
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist-Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginBottom": 6,
      }
    }
    testID="label"
  >
    Date of Birth
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#b7bbc8",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "opacity": 1,
        "paddingHorizontal": 16,
      }
    }
    testID="textfield"
  >
    <View
      style={
        {
          "marginRight": 8,
        }
      }
      testID="textfield-startacccessory"
    >
      <SvgMock
        color="#121314"
        fill="currentColor"
        height={20}
        name="Calendar"
        style={
          {
            "height": 20,
            "width": 20,
          }
        }
        width={20}
      />
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <TouchableOpacity
        activeOpacity={0.7}
        onPress={[Function]}
        style={
          {
            "flex": 1,
            "height": "100%",
          }
        }
      >
        <TextInput
          editable={false}
          placeholder="01/01/2000"
          placeholderTextColor="#b7bbc8"
          pointerEvents="none"
          style={
            {
              "color": "#121314",
              "flex": 1,
              "fontSize": 16,
              "height": "100%",
              "textAlign": "left",
            }
          }
          value="01/01/2024"
        />
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`DepositDateField render matches snapshot with a value 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
        "marginBottom": 16,
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist-Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginBottom": 6,
      }
    }
    testID="label"
  >
    Date of Birth
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#b7bbc8",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "opacity": 1,
        "paddingHorizontal": 16,
      }
    }
    testID="textfield"
  >
    <View
      style={
        {
          "marginRight": 8,
        }
      }
      testID="textfield-startacccessory"
    >
      <SvgMock
        color="#121314"
        fill="currentColor"
        height={20}
        name="Calendar"
        style={
          {
            "height": 20,
            "width": 20,
          }
        }
        width={20}
      />
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <TouchableOpacity
        activeOpacity={0.7}
        onPress={[Function]}
        style={
          {
            "flex": 1,
            "height": "100%",
          }
        }
      >
        <TextInput
          editable={false}
          placeholder="01/01/2000"
          placeholderTextColor="#b7bbc8"
          pointerEvents="none"
          style={
            {
              "color": "#121314",
              "flex": 1,
              "fontSize": 16,
              "height": "100%",
              "textAlign": "left",
            }
          }
          value="01/02/2024"
        />
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`DepositDateField render matches snapshot with an error 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
        "marginBottom": 16,
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist-Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginBottom": 6,
      }
    }
    testID="label"
  >
    Date of Birth
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#b7bbc8",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "opacity": 1,
        "paddingHorizontal": 16,
      }
    }
    testID="textfield"
  >
    <View
      style={
        {
          "marginRight": 8,
        }
      }
      testID="textfield-startacccessory"
    >
      <SvgMock
        color="#121314"
        fill="currentColor"
        height={20}
        name="Calendar"
        style={
          {
            "height": 20,
            "width": 20,
          }
        }
        width={20}
      />
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <TouchableOpacity
        activeOpacity={0.7}
        onPress={[Function]}
        style={
          {
            "flex": 1,
            "height": "100%",
          }
        }
      >
        <TextInput
          editable={false}
          placeholder="01/01/2000"
          placeholderTextColor="#b7bbc8"
          pointerEvents="none"
          style={
            {
              "color": "#121314",
              "flex": 1,
              "fontSize": 16,
              "height": "100%",
              "textAlign": "left",
            }
          }
          value="01/01/2024"
        />
      </TouchableOpacity>
    </View>
  </View>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#ca3542",
        "fontFamily": "Geist-Regular",
        "fontSize": 12,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginTop": 4,
      }
    }
  >
    Invalid date format
  </Text>
</View>
`;

exports[`DepositDateField render matches snapshot with empty value 1`] = `
<View
  style={
    [
      {
        "flexDirection": "column",
        "marginBottom": 16,
      },
      undefined,
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist-Regular",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
        "marginBottom": 6,
      }
    }
    testID="label"
  >
    Date of Birth
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#b7bbc8",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "opacity": 1,
        "paddingHorizontal": 16,
      }
    }
    testID="textfield"
  >
    <View
      style={
        {
          "marginRight": 8,
        }
      }
      testID="textfield-startacccessory"
    >
      <SvgMock
        color="#121314"
        fill="currentColor"
        height={20}
        name="Calendar"
        style={
          {
            "height": 20,
            "width": 20,
          }
        }
        width={20}
      />
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <TouchableOpacity
        activeOpacity={0.7}
        onPress={[Function]}
        style={
          {
            "flex": 1,
            "height": "100%",
          }
        }
      >
        <TextInput
          editable={false}
          placeholder="01/01/2000"
          placeholderTextColor="#b7bbc8"
          pointerEvents="none"
          style={
            {
              "color": "#121314",
              "flex": 1,
              "fontSize": 16,
              "height": "100%",
              "textAlign": "left",
            }
          }
          value=""
        />
      </TouchableOpacity>
    </View>
  </View>
</View>
`;
